@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class AuthenticationRepository
{
    + getCurrentUserSession()
}

class UserSession
{
    + isLoggedInWithRole()
    + getUserId()
}



class Job {
    - String jobName
}



class Organization {
    - String name
    - String vatNumber
    - String phone
    - String email
    - Address postalAddress
    - addJob(job)
    - validateJob(job)
    + Organization(name, vatNumber, webSite, phone, email, postalAddress)
    + createJob(job)
    - getUserByEmail(email)

}


class OrganizationRepository {
    + getOrganizationByUserEmail(email)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getOrganizationRepository()
    + getAuthenticationRepository()
}
class Employee {
    - String name
    - Date birthdate
    - Date admission date
    - Address postalAddress
    - String phone
    - String email
    - String ID doc type
    - String ID document number
    - String Taxpayer ID
    - Job job
    + CompareTo(TaxPayerID)
    + Clone()
    + toString()
    + hasThisEmail(mail)
}

class EmployeeRepository{
    -EmployeeRepository()
    +addJob(Job job)
    +listEmployees()
    +emailExists(mail)
}

class CreateJobController {
    + CreateJobController(organizationRepository,AuthenticationRepository)
    + createJob(job)

}

note left of CreateJobController
    - userEmail and userRole is obtained
    from the user session.
end note


class CreateJobUI {
}

Repositories -> Repositories : instance
CreateJobUI .> CreateJobController
CreateJobController .> Repositories : repositories
Repositories --> "1" OrganizationRepository
OrganizationRepository --> "*" Organization : organizations
AuthenticationRepository -> "1" UserSession : usersession
Repositories --> "1" AuthenticationRepository
Employee "1" --> "*" Job : creates
Repositories "1" --> "1" EmployeeRepository
Organization "1" --> "*" Employee : employs
EmployeeRepository "1" --> "*" Employee : agreggates
CreateJobController .> AuthenticationRepository
Organization "1" --> "1" EmployeeRepository



@enduml